# Motor_Seriallink

./: README.md  pyproject.toml
motor_seriallink/: abdel_code.py  motor_seriallink.py  test.py
